--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -124,3 +124,145 @@ nav {
         }
     }
 }
+
+/* Homepage.About */
+
+.HomepageAbout {
+    margin-top: 10%;
+
+    .IconMedsos {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            inset: 0;
+        
+        .section{
+            background-color: #000;
+            color: #fff;
+            height: 36px;
+            width: 36px;
+            margin: 0px 7px 0px;
+            border-radius: 8px;
+            display: inline-flex;
+            align-items: center;
+            white-space: nowrap;
+            overflow: hidden;
+            box-shadow: 5px 5px 8px rgba(0,0,0,0.9);
+            transition: width 300ms ease-in-out 0s, background-color 300ms linear 200ms;
+        }
+        
+        .icon{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 36px;
+            aspect-ratio: 1 / 1;
+        }
+        
+        a{
+            text-decoration: none;
+        }
+        
+        .section:hover{
+            width: 140px;
+            transition: width 300ms ease-in-out 0s, background-color 100ms linear 0s;
+        }
+        
+        .section::after{
+            content: attr(tooltip);
+            margin-left: 10px;
+        }
+        
+        .facebook:hover{
+            background: #3b5998;
+        }
+        
+        .instagram:hover{
+            background: #3f729b;
+        }
+        
+        .youtube:hover{
+            background: #cd201f;
+        }
+        
+        .twitter:hover{
+            background: #55acee;
+        }
+        
+        .github:hover{
+            background: #00405d;
+        }
+    }
+
+    .KontakKami {
+        text-align: center;
+    }
+
+    .TentangKami {
+        text-align: center;
+        .title {
+            text-align: center;
+            margin: 70px;
+        }
+        .row {
+            justify-content: space-between;
+            hr {
+                border-top: 2px solid black;
+            }
+            .Card-1 {
+                margin-bottom: 40px;
+                margin-top: 15px;
+                background-color: white;
+                border-radius: 15px;
+                width: 22%;
+                padding: 20px;
+                text-align: center;
+            }
+        }
+    }
+
+    .Testimoni {
+        text-align: center;
+        .column {
+            hr {
+                border-top: 2px solid black;
+            }
+            .CardPelanggan1 {
+                margin-bottom: 40px;
+                margin-top: 15px;
+                background-color: white;
+                border-radius: 15px;
+                width: 100%;
+                padding: 40px;
+                text-align: start;
+                justify-content: space-between;
+                .card-text {
+                    margin: auto 0;
+                }
+                img {
+                    width: 30%;
+                    border-radius: 15px;
+                }
+            }
+            .CardPelanggan2 {
+                margin-bottom: 40px;
+                margin-top: 15px;
+                background-color: white;
+                border-radius: 15px;
+                width: 100%;
+                padding: 40px;
+                text-align: end;
+                justify-content: space-between;
+
+                flex-direction: row-reverse;
+                .card-text {
+                    margin: auto 0;
+                }
+                img {
+                    width: 30%;
+                    border-radius: 15px;
+                }
+            }
+        }
+    }
+}
